#5 - Fixed implementation by setting the parent lambda variable